src/app/app.component.scss
wave-navigation {
    z-index: 10;
}

wave-next-layer-list {
    position: absolute;
    z-index: 1;
    width: 16vw;
    min-width: 200px;
    left: 0;
    top: 0;
    background-color: rgba(255,255,255,0.87);
    border-bottom-right-radius: 2px;
}

.time-container {
    position: absolute;
    left: 16vw;
    right: 16vw;

    wave-small-time-interaction {
        background-color: rgba(255, 255, 255, 0.87);
        border-bottom-left-radius: 2px;
        border-bottom-right-radius: 2px;
        z-index: 2;
    }
}


:host /deep/ .mat-sidenav-content {
    overflow: hidden;
}

.top-container {
    z-index: 1;
}

.mid-container {
    z-index: 0;
    position: relative;
}

.bottom-container {
    position: relative;
    z-index: 1;

    min-height: 3rem;
    @media (max-width: 600px) and (orientation: portrait) {
        min-height: 2.5rem;
    }
    @media (max-width: 960px) and (orientation: landscape) {
        min-height: 2rem;
    }

    .toggle {
        position: absolute;
        z-index: 1;
        padding: 0;
        min-width: 3rem;
        width: 3rem;
        height: 3rem;
        @media (max-width: 600px) and (orientation: portrait) {
            min-width: 2.5rem;
            width: 2.5rem;
            height: 2.5rem;
        }
        @media (max-width: 960px) and (orientation: landscape) {
            min-width: 2rem;
            width: 2rem;
            height: 2rem;
        }
    }

    /deep/ .mat-tab-label-container {
        margin-left: 3rem;
        @media (max-width: 600px) and (orientation: portrait) {
            margin-left: 2.5rem;
        }
        @media (max-width: 960px) and (orientation: landscape) {
            margin-left: 2rem;
        }
    }

    @media (max-width: 960px) and (orientation: landscape) {
        /deep/ md-tab-header {
            height: 2rem;
        }
        /deep/ .mat-tab-label {
            line-height: 2rem;
        }
    }
    @media (max-width: 600px) and (orientation: portrait) {
        /deep/ md-tab-header {
            height: 2.5rem;
        }
        /deep/ .mat-tab-label {
            line-height: 2.5rem;
        }
    }
}

.bottom-container.small {
    max-height: 3rem !important;
    @media (max-width: 600px) and (orientation: portrait) {
        max-height: 2.5rem !important;
    }
    @media (max-width: 960px) and (orientation: landscape) {
        max-height: 2rem !important;
    }

    /deep/ md-tab-header {
        border: 0;
    }
}

wave-data-table {
    height: 100%;
}

